SERVER-5357: Map/Reduce operation writes output data in primary node of replica set but not in secondary nodes